finish swagger api
